create start panel and add script

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <div class="wrapper">
     <header>
         <nav>
-            <a href="#">health</a>
-            <a href="#">eat</a>
-            <a href="#">animals</a>
-            <a href="#">news</a>
+            <a href="#">Mykhailo Mudryk</a>
+            <a href="#">Oleksandr Zinchenko</a>
+            <a href="#">Ukraine football</a>
+            <a href="#">Ukraine</a>
         </nav>
         <h1 class="title">Hot News</h1>
     </header>
@@ -33,6 +33,8 @@
         <span>Made by Korneliia &copy;</span>
     </footer>
 </div>
-<script src="./scripts/main.js"></script>
+<script src="scripts/currentArticle.js"></script>
+<script src="scripts/startPanel.js"></script>
+<script src="scripts/main.js"></script>
 </body>
 </html>
