create new class currentArticle.js and add styles

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <link href="styles/header.css" rel="stylesheet">
     <link href="./styles/main.css" rel="stylesheet">
     <link href="styles/footer.css" rel="stylesheet">
+    <link href="styles/proposedNews.css" rel="stylesheet">
+    <link href="styles/currentArticle.css" rel="stylesheet">
 
     <!--    responsiveStyles-->
     <link href="styles/responsive/header.css" rel="stylesheet">
     <link href="styles/responsive/main.css" rel="stylesheet">
+    <link href="styles/responsive/proposedNews.css" rel="stylesheet">
+    <link href="styles/responsive/currentArticle.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,14 +31,15 @@
         <h1 class="title">Hot News</h1>
     </header>
     <main>
-
+        <div class="proposedNews"></div>
+        <div class="currentArticle"></div>
     </main>
     <footer>
         <span>Made by Korneliia &copy;</span>
     </footer>
 </div>
 <script src="scripts/currentArticle.js"></script>
-<script src="scripts/startPanel.js"></script>
+<script src="scripts/proposedNews.js"></script>
 <script src="scripts/main.js"></script>
 </body>
 </html>
