changes in script and css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav>
             <a href="#">Mykhailo Mudryk</a>
-            <a href="#">Oleksandr Zinchenko</a>
+            <a href="#" id="default">Oleksandr Zinchenko</a>
             <a href="#">Ukraine football</a>
             <a href="#">Ukraine</a>
         </nav>
